<resources>
    <string name="app_name">Dream Social Club</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Logout</string>
    <string name="silver_coin">Silver Coin</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="topup">TopUp</string>
    <string name="convert_coin">Convert Coin</string>
    <string name="cash_out">Cash Out</string>
    <string name="tutorial">Tutorial</string>
    <string name="support_online">Support Online</string>
    <string name="terms_and_condition">Terms And Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
</resources>
